# icp-message-board-rust

./: .gitignore  Cargo.toml  README.md  dfx.json  did.sh  package.json
src/icp_rust_message_board_contract_backend/: Cargo.toml  icp_rust_message_board_contract_backend.did
src/icp_rust_message_board_contract_backend/src/: lib.rs
