[package]
name = "icp_rust_message_board_contract_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.3"
ic-cdk = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.10"
ic-cdk-macros = "0.7.1"
